2017-06-23  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* src/ttfdump.c: avoid segmentation fault when the requested
	ttc font is not found.

2016-07-15  Adrian Johnson  <ajohnson@redneon.com>

	* libttf/cmap.c,
	* libttf/name.c,
	* libttf/post.c: check for null before dereferencing in case
	of missing cmap/name/post tables.
	tex-live mail of 9 Jul 2016 18:17:16.

2015-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2015-03-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* include/ttc.h, libttf/ttc.c: Avoid segfault (NULL filename).
	* tests/ttfdump.gasp, tests/ttfdump.maxp: Adapt.

2015-02-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ac/withenable.ac: Require kpathsea.

2015-02-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tests/ttfdump.test: Add a TrueType Collection test.
	* tests/test.ttc (new): Additional test input.
	* tests/ttfdump.gasp, tests/ttfdump.maxp (new): Expected output.
	* Makefile.am: Adapted.

2014-12-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* libttf/pclt.c: Repalce "%02hx" => "%02x" for unsigned char.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2013-06-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Include <config.h> first in all C files and never in headers.

2013-04-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* src/ttfdump.c [KPATHSEA]: Recover #include <kpathsea/getopt.h>
	for WIN32 to avoid compiling error.

2013-04-03  Karl Berry  <karl@tug.org>

	* src/ttfdump.c [KPATHSEA]: #include <unistd.h> rather than
	<kpathsea/getopt.h>.  Otherwise optarg is NULL on 32-bit MacOSX
	and thus all options-with-arguments fail.  Report and patch from
	Dick Koch.

2013-02-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* libttf/os2.c: Index checking for string array elements.
	* tests/ttfdump.test: Add a test case for invalid array indices.
	* tests/bad.otf (new): Additional test input.